--- a/scoops-web/nginx.conf
+++ b/scoops-web/nginx.conf
@@ -1,14 +1,47 @@
 server {
     listen 80;
-    
+    client_max_body_size 20M;
+
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
 
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
+    # Auth API
+    location /api/auth/ {
+        proxy_pass http://auth-api:8080/api/auth/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /api/products {
+        proxy_pass http://management-api:8080/api/products;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /images/ {
+        proxy_pass http://management-api:8080/images/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /api/suppliers {
+        proxy_pass http://management-api:8080/api/suppliers;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /api/deliveries {
+        proxy_pass http://management-api:8080/api/deliveries;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /api/orders {
+    proxy_pass http://management-api:8080/api/orders;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
     }
 }
