--- a/scoops-web/nginx.conf
+++ b/scoops-web/nginx.conf
@@ -8,40 +8,28 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Auth API
+    # 1. API DE AUTENTICAÇÃO
     location /api/auth/ {
-        proxy_pass http://auth-api:8080/api/auth/;
+        # Verifique se o nome do container é 'scoops-auth-api' ou 'auth-api' no docker-compose
+        proxy_pass http://scoops-auth-api:8080/api/auth/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
-    location /api/products {
-        proxy_pass http://management-api:8080/api/products;
+    # 2. API DE GESTÃO (Produtos, Fornecedores, Pedidos, Dashboard)
+    # Esta regra captura TUDO que começa com /api/ e não é auth
+    location /api/ {
+        # Verifique se o nome do container é 'scoops-management-api' ou 'management-api'
+        # A barra no final (/api/) é CRUCIAL para não duplicar o caminho
+        proxy_pass http://scoops-management-api:8080/api/;
+        
+        proxy_set_header Authorization $http_authorization;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
 
+    # Imagens
     location /images/ {
-        proxy_pass http://management-api:8080/images/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
-
-    location /api/suppliers {
-        proxy_pass http://management-api:8080/api/suppliers;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
-
-    location /api/deliveries {
-        proxy_pass http://management-api:8080/api/deliveries;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
-
-    location /api/orders {
-    proxy_pass http://management-api:8080/api/orders;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
+        proxy_pass http://scoops-management-api:8080/images/;
     }
 }
